--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.838);
+    background-color: rgba(199, 195, 195, 0.838);
 }
 #myH1{
     font-size: 4rem;
-    font-family: "Arial", sans-serif;
-    color: grey;
+    font-family: "Verdana", sans-serif;
+    font-weight: bold;
+    padding-bottom: 20px;
+    color: rgb(0, 0, 0);
 }
 #container{
     display: flex;
@@ -21,8 +23,7 @@ body{
 #display{
     font-size: 5rem;
     font-family: monospace;
-    font-weight: bold;
-    color: gray;
+    color: rgb(0, 0, 0);
     text-shadow: 2px 2px 2px black;
     margin-bottom: 25px;
 }
@@ -32,19 +33,19 @@ body{
     padding: 10px 20px;
     margin: 5px;
     min-width: 125px;
-    border: none;
-    border-bottom: 10px;
+    border: 5px solid black;
+    border-radius: 5%;
     cursor: pointer;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 #startBtn{
-    background-color: rgb(93, 255, 68);
+    background-color: rgb(85, 230, 63);
 }
 #startBtn:hover{
     background-color: rgb(103, 146, 38)
 }
 #stopBtn{
-    background-color: rgb(255, 47, 47);
+    background-color: rgb(226, 46, 46);
 }
 #stopBtn:hover{
     background-color: rgba(196, 35, 35, 0.906);
